--- a/Domingo_itec75a/domingo_Lab2.html
+++ b/Domingo_itec75a/domingo_Lab2.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div class="container">
-  <h1>My Bithday Calendar</h1>
+  <h1>My Birthday Calendar</h1>
   <center><h1>June 2000</h1></center>
   <div class="container">
     
